--- a/src/layout/Hero/hero.css
+++ b/src/layout/Hero/hero.css
@@ -16,3 +16,30 @@
   gap: 3.2rem;
   padding: 3.2rem 1.6rem;
 }
+
+.hero__description {
+  color: var(--dark-gray);
+}
+
+@media (min-width: 768px) {
+  .thumbnail {
+    grid-column: 1 / 1;
+    grid-row: 1 / 1;
+  }
+  .thumbnail__image {
+    width: 56.9%;
+  }
+
+  .hero__body {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    gap: 4.8rem;
+
+    justify-self: end;
+    align-self: center;
+
+    width: 33.5rem;
+    margin-right: 4rem;
+    padding: 0;
+  }
+}
