--- a/src/index.css
+++ b/src/index.css
@@ -47,17 +47,17 @@
   line-height: 3.6rem;
 } */
 
-.body-m {
-  font-family: var(--outfit);
-  font-size: 2.2rem;
-  font-weight: 300;
-  line-height: 3.2rem;
-}
-
-.body-s {
+.body-text {
   font-family: var(--outfit);
   font-size: 1.8rem;
   font-weight: 300;
   line-height: 2.8rem;
   letter-spacing: 0;
+}
+
+@media (min-width: 1024px) {
+  .body-text {
+    font-size: 2.2rem;
+    line-height: 3.2rem;
+  }
 }
