--- a/src/layout/Hero/hero.css
+++ b/src/layout/Hero/hero.css
@@ -3,7 +3,9 @@
 }
 
 .thumbnail {
+  position: relative;
   width: 100%;
+  z-index: -1;
 }
 
 .thumbnail__image {
@@ -23,8 +25,8 @@
 
 @media (min-width: 768px) {
   .thumbnail {
-    grid-column: 1 / 1;
-    grid-row: 1 / 1;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
   .thumbnail__image {
     width: 56.9%;
@@ -41,5 +43,46 @@
     width: 33.5rem;
     margin-right: 4rem;
     padding: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .thumbnail::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background-color: var(--almost-black);
+    z-index: -1;
+  }
+  .thumbnail__image {
+    display: block;
+    margin: 0 auto;
+    width: auto;
+    height: 80rem;
+  }
+
+  .hero__body {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto 35rem;
+    gap: 0;
+
+    margin: 0;
+    width: 100%;
+    max-width: 111rem;
+    justify-self: center;
+    align-self: flex-start;
+    margin-top: 19rem;
+  }
+
+  .hero__title {
+    max-width: 45rem;
+  }
+
+  .hero__button {
+    margin-top: 4.8rem;
+    grid-column: 2/3;
   }
 }
