--- a/src/index.css
+++ b/src/index.css
@@ -22,13 +22,13 @@
   font-weight: 900;
   font-size: 6rem;
   line-height: 5rem;
+  letter-spacing: 0px;
 }
 
 @media (min-width: 768px) {
   .headline {
     font-size: 7rem;
     line-height: 6.5rem;
-    letter-spacing: 0;
   }
 }
 
