--- a/src/layout/Grid/grid.css
+++ b/src/layout/Grid/grid.css
@@ -66,3 +66,19 @@
     align-content: center;
   }
 }
+
+@media (min-width: 1024px) {
+  .grid {
+    width: calc(100% - 8rem);
+    max-width: 111rem;
+    padding: 0;
+    margin: 0 auto;
+
+    gap: 3rem;
+  }
+
+  .grid__body,
+  .grid__body-flex {
+    gap: 3rem;
+  }
+}
