--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,14 @@
   letter-spacing: 0;
 }
 
+.footer-text {
+  font-family: var(--outfit);
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 2.6rem;
+  letter-spacing: 0;
+}
+
 @media (min-width: 1024px) {
   .body-text {
     font-size: 2.2rem;
