--- a/src/index.css
+++ b/src/index.css
@@ -73,4 +73,9 @@
     font-size: 2.2rem;
     line-height: 3.2rem;
   }
+
+  .footer-text {
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+  }
 }
