--- a/src/layout/Footer/footer.css
+++ b/src/layout/Footer/footer.css
@@ -1,13 +1,16 @@
 .footer {
+  background-color: var(--gold);
+
+  color: var(--almost-black);
+}
+
+.footer__wrapper {
   display: flex;
   flex-direction: column;
   gap: 3.8rem;
   align-items: flex-start;
 
   padding: 4.8rem 3.2rem;
-  background-color: var(--gold);
-
-  color: var(--almost-black);
 }
 
 .footer.is-dark {
@@ -19,4 +22,36 @@
 .footer__logo {
   width: auto;
   height: 4rem;
+}
+
+@media (min-width: 768px) {
+  .footer__wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+
+    padding: 5.6rem 4rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .footer__wrapper {
+    width: calc(100% - 6.4rem);
+    max-width: 111rem;
+    margin: 0 auto;
+    padding: 8rem 0;
+    justify-content: start;
+    gap: 14rem;
+  }
+
+  .footer__logo {
+    height: 5.8rem;
+  }
+
+  .footer__description {
+    max-width: 43rem;
+  }
+
+  .footer .links {
+    margin-left: auto;
+  }
 }
